Added the nightly script and answers.json

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -160,6 +160,10 @@ If you shoot us an e-mail we'll add you.</p>
 <h2>Data loading</h2>
 <table>
     <tr>
+        <td class="metric">Concurrent batches</td>
+        <td>{{ dataload.concurrentBatches }}</td>
+    </tr>
+    <tr>
         <td class="metric">Total requests</td>
         <td>{{ dataload.requests }}</td>
     </tr>
